kube-apps/trilium-notes/trilium-notes-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: trilium-ingress
 annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/frontend-entry-points: http,https
    traefik.ingress.kubernetes.io/redirect-entry-point: https
    traefik.ingress.kubernetes.io/redirect-permanent: "true"
    cert-manager.io/issuer: "letsencrypt-staging"
spec:
  tls:
  - hosts:
    - trilium.dentropydaemon.net
    secretName: trilium-cert-tls
  rules:
    - host: trilium.dentropydaemon.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: trilium-notes
                port: 
                  number: 8080
